2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/30_while_cond_comp.deca
// Description :
//     Test sur while    
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024
{
    int x = 0 ;
    while(x <= 2)
    {
        x = x + 1 ;
    }
}