2A/05_Projet_GL/src/test/deca/context/invalid/complet/33_declavar_declparam_body.deca
// Description :
//    duplication du decl parm en decl var dans methodbody 
// Resultats :
//    ligne 10 : a est deja declarée 
// Historique :
//  cree le 16/01/2024

class A {
    int add(int a , int b) {
        int a = 0 ;
        a = a + b ;
        return a ;
    }
}